# MixFace

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CopyDependencies.cmake  MixFace.pro  MixFace.sln  MixFace.workspace  README.md
DebugLibrary/: CMakeLists.txt  DebugLibrary.cpp  DebugLibrary.h  DebugLibrary.hpp  DebugLibrary.pro  DebugLibrary.rc  DebugLibrary.rc.in  DebugLibrary.vcxproj
MixFaceLibrary/: CMakeLists.txt  MixFaceKeeper.cpp  MixFaceKeeper.h  MixFaceLibrary.cpp  MixFaceLibrary.h  MixFaceLibrary.pro  MixFaceLibrary.rc  MixFaceLibrary.rc.in  MixFaceLibrary.vcxproj  MixFaceLinker.cpp  MixFaceLinker.h  MixFaceListener.h  MixFaceStatic.h  Timer.hpp
MixFaceQtWidgets/: AndroidManifest.xml.in  CMakeLists.txt  CopyDependencies.cmake  MixFace.qrc  MixFace.rc  MixFace.rc.in  MixFaceDynamicsWidget.cpp  MixFaceDynamicsWidget.h  MixFaceEnumTypes.h  MixFaceEqualizerWidget.cpp  MixFaceEqualizerWidget.h  MixFaceFaderWidget.cpp  MixFaceFaderWidget.h  MixFaceFonts.h  MixFaceIconPicker.cpp  MixFaceIconPicker.h  MixFaceQtWidgets.pro  MixFaceQtWidgets.vcxproj  MixFaceResources.qrc  MixFaceRightWidget.cpp  MixFaceRightWidget.h  MixFaceSourceWidget.cpp  MixFaceSourceWidget.h  MixFaceStaticMath.h  MixFaceTopWidget.cpp  MixFaceTopWidget.h  MixFaceVolumeMeter.cpp  MixFaceVolumeMeter.h  MixFaceWindow.cpp  MixFaceWindow.h  android-MixFace-deployment-settings.json.in
MixFaceQtWidgets/android/: AndroidManifest.xml  AndroidManifest.xml.in
MixFaceQtWidgets/android/res/drawable/: splashscreen.xml
MixFaceWXWidgets/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  MixFace.cpp  MixFaceBaseObjects.cpp  MixFaceBaseObjects.fbp  MixFaceBaseObjects.h  MixFaceFader.cpp  MixFaceFader.fbp  MixFaceFader.h  MixFaceFader.wxcp  MixFaceFader.xrc  MixFaceFaderBase.cpp  MixFaceFaderBase.h  MixFaceFaderBitmaps.cpp  MixFaceFaderBitmaps.xrc  MixFaceMeter.cpp  MixFaceMeter.h  MixFaceResources.cpp  MixFaceResources.h  MixFaceResources.wxcp  MixFaceResourcesBitmaps.cpp  MixFaceResourcesBitmaps.xrc  MixFaceWXWidgets.cpp  MixFaceWXWidgets.h  MixFaceWXWidgets.pro  MixFaceWXWidgets.wxcp  MixFaceWindow.cpp  MixFaceWindow.fbp  MixFaceWindow.h  MixFaceWindow.wxcp  MixFaceWindow.xrc  MixFaceWindowBase.cpp  MixFaceWindowBase.h  MixFaceWindowBitmaps.cpp  dbMeter.cpp  dbMeter.h  main.cpp  mainForm.cpp  mainForm.h  (+3 more)
OSCPACK/: OSCPACK.vcxproj
X32-Shutdown/: CMakeLists.txt  main.cpp
