cmake_minimum_required(VERSION 3.16.0)

project(MixFaceProject)

#Boost library finder
if(ANDROID)
    set(Boost_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../Boost-for-Android/build/out/${ANDROID_ABI}/include/boost-1_76/")
    set(Boost_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../Boost-for-Android/build/out/${ANDROID_ABI}/lib/")
else()
    set(Boost_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../boost_1_76_0/")
    set(Boost_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../boost_1_76_0/stage/lib/")
endif()
message(STATUS "BOOST LIBRARY DIR is ${Boost_LIBRARY_DIR}")
message(STATUS "BOOST INCLUDE DIR is ${Boost_INCLUDE_DIR}")
include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})
if(ANDROID)
    if(${ANDROID_ABI} STREQUAL "armeabi-v7a")
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_thread-clang-mt-a32-1_76.a)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_chrono-clang-mt-a32-1_76.a)
    elseif(${ANDROID_ABI} STREQUAL "arm64-v8a")
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_thread-clang-mt-a64-1_76.a)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_chrono-clang-mt-a64-1_76.a)
    elseif(${ANDROID_ABI} STREQUAL "x86")
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_thread-clang-mt-x32-1_76.a)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_chrono-clang-mt-x32-1_76.a)
    elseif(${ANDROID_ABI} STREQUAL "x86_64")
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_thread-clang-mt-x64-1_76.a)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_chrono-clang-mt-x64-1_76.a)
    endif()
endif()
if(MINGW)
    string(TOUPPER "${CMAKE_BUILD_TYPE}" uppercase_CMAKE_BUILD_TYPE)
    if(uppercase_CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR uppercase_CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_thread-mgw8-mt-d-x64-1_76.a)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_chrono-mgw8-mt-d-x64-1_76.a)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_date_time-mgw8-mt-d-x64-1_76.a)
    else(uppercase_CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR uppercase_CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_thread-mgw8-mt-x64-1_76.a)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_chrono-mgw8-mt-x64-1_76.a)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_date_time-mgw8-mt-x64-1_76.a)
    endif(uppercase_CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR uppercase_CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
endif()
if(MSVC)
    string(TOUPPER "${CMAKE_BUILD_TYPE}" uppercase_CMAKE_BUILD_TYPE)
    if(uppercase_CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR uppercase_CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_thread-vc142-mt-gd-x64-1_76.lib)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_chrono-vc142-mt-gd-x64-1_76.lib)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_date_time-vc142-mt-gd-x64-1_76.lib)
    else(uppercase_CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR uppercase_CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_thread-vc142-mt-x64-1_76.lib)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_chrono-vc142-mt-x64-1_76.lib)
        set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_date_time-vc142-mt-x64-1_76.lib)
    endif(uppercase_CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR uppercase_CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
endif()
if(UNIX AND NOT ANDROID)
    set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_thread.a)
    set(Boost_LIBRARIES ${Boost_LIBRARIES} libboost_chrono.a)
endif()

#Options
OPTION(DISABLE_QTWIDGETS "Disable QT build" OFF)
OPTION(DISABLE_X32ST "Disable shutdown tool" ON)

#OSC ONLY LIBRARY BUILD
OPTION(OSC_LIB_ONLY "Enable build only library" ON)

#SUBDIRS
add_subdirectory(OSCPACK)
include_directories(OSCPACK)
add_subdirectory(DebugLibrary)
include_directories(DebugLibrary)
add_subdirectory(MixFaceLibrary)
include_directories(MixFaceLibrary)

#GUI
if(NOT DISABLE_QTWIDGETS)
    add_subdirectory(MixFaceQtWidgets)
    include_directories(MixFaceQtWidgets)
endif(NOT DISABLE_QTWIDGETS)

#TOOL
if(NOT DISABLE_X32ST)
add_subdirectory(X32-Shutdown)
endif(NOT DISABLE_X32ST)
